--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<img class="text-icon" src="img/invitation-icon.png" width="250" height="220">
 			</section>
 			<section class="invite-data">
-				<a class="data-button data-button-bg" href="https://wj.qq.com/s/1009676/539d">我要参加</a>
+				<a class="data-button data-button-bg" href="https://wj.qq.com/s2/15303307/b190/">我要参加</a>
 				<a class="data-button" href="http://apis.map.qq.com/uri/v1/marker?marker=coord:40.642882,109.848177;title:婚礼场地;addr:一楼XX厅&referer=婚礼请帖">婚礼场地</a>
 			</section>
 		</div>
