--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>巩浩和马娜的婚礼喜帖</title>
+	<title>巩浩与马娜的婚礼喜帖</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="auther" content="tychio">
     <meta name="description" content="诚挚的邀请您参加巩浩先生与马娜女士的婚礼！婚礼将于2024年10月2日12时18分在鼎盛楼大酒店(民族东路店)一楼xx厅举行，欢迎届时光临。">
