--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="lib/html5shiv/dist/html5shiv.min.js"></script>
 	<![endif]-->
-	<script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp&key=5ZGBZ-DMRCN-I22FY-SDZCW-E5ZPE-ONB3P"></script>
+	<script charset="utf-8" src="https://map.qq.com/api/gljs?v=1.exp&libraries=service&key=5ZGBZ-DMRCN-I22FY-SDZCW-E5ZPE-ONB3P"></script>
 
 </head>
 <body>
