--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 	</main>
 	<footer></footer>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<div id="container"></div>
 	<script type="text/javascript">
 		var map = new TMap.Map('container', {
 			zoom: 14,
