--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
 	</main>
 	<footer></footer>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
